--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flip-toolkit": "^7.0.13",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0"
