--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "animejs": "^3.2.1",
     "date-fns": "^2.22.1",
     "next": "11.0.1",
     "react": "17.0.2",
