--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "animejs": "^3.2.1",
     "date-fns": "^2.22.1",
+    "flip-toolkit": "^7.0.13",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +24,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.4",
     "@types/react": "17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.11",
